glx/testdata/invalid/broken-references/assertions/assertion-john-birthplace.glx
assertions:
  assertion-john-birth-place:
    subject:
      event: event-birth-john
    property: place
    value: place-leeds
    citations:
      - citation-john-birth
    confidence: high
    sources:
      - source-parish-leeds
    notes: "Birth place stated in parish register"
